--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-pageflip": "^2.0.3",
     "react-pdf": "^7.5.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
